--- a/package.json
+++ b/package.json
@@ -17,13 +17,21 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+     "react-hot-toast": "^2.4.1",
+     "react-icons": "^4.10.1",
+      "react-router-dom": "^6.14.2",
+    "web-vitals": "^2.1.4",
+    "concurrently": "^8.2.0",
+    "flowbite-react": "^0.6.4",
+    
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "cd server && npm run dev",
+    "dev": "concurrently -n \"client,server\" -c \"bgBlue,bgYellow\" \"npm start\" \"npm run server\""
   },
   "eslintConfig": {
     "extends": [
