--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,9 +6,19 @@
     "mongoose": "^7.6.3",
     "nodemon": "^3.0.1",
     "openai": "^4.12.4"
+    "bcrypt": "^5.1.0",
+    "cloudinary": "^1.39.0",
+    "cookie-parser": "^1.4.6",
+    "cookies": "^0.8.0",
+     "express-fileupload": "^1.4.0",
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.4.1",
+    "nodemailer": "^6.9.4",
+    "nodemon": "^3.0.1"
   },
   "scripts": {
     "start": "node server.js",
-    "exp": "nodemon server.js"
+    "exp": "nodemon server.js",
+    "dev": "nodemon index.js"
   }
 }
